--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -4,7 +4,7 @@
 }
 
 .centered-container {
-  height: 100vh;
+  height: calc(100vh - 100px);
   align-items: center;
   display: flex;
   justify-content: center;
