--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -4,3 +4,10 @@ $border-color: #dddddd;
 
 $instagram-color: #cd486b;
 $facebook-color: #3b5998;
+
+$yellow: #ffca28;
+$red: #ef5350;
+$green: #9ccc65;
+$gray: #868e96;
+$primary-blue: #3369e7;
+$primary-light-blue: #00aeff;
