--- a/src/app/components/checkout-form/checkout-form.component.html
+++ b/src/app/components/checkout-form/checkout-form.component.html
@@ -36,33 +36,33 @@
     </div>
   </div>
 
-  <div class="form-group row">
-    <div class="col-5 form-col">
-      <div class="float-label-container">
-        <input type="tel"
-               id="zipCode"
-               class="form-control form-control-lg"
-               formControlName="zipCode"
-               placeholder="Postnummer">
-        <label for="zipCode">Postnummer</label>
-        <div *ngIf="myForm.get('zipCode').touched" class="errors">
-          <small class="error" *ngIf="myForm.get('zipCode').hasError('required')">Krevd</small>
-          <small class="error" *ngIf="myForm.get('zipCode').hasError('minlength')">For kort</small>
-          <small class="error" *ngIf="myForm.get('zipCode').hasError('maxlength')">For langt</small>
-          <small class="error" *ngIf="myForm.get('zipCode').hasError('pattern')">Ikke gyldig
-          </small>
-        </div>
-      </div>
-    </div>
-    <div class="col-7 form-col">
-      <div class="float-label-container">
-        <input type="text"
-               class="form-control form-control-lg"
-               formControlName="postalPlace"
-               placeholder="Poststed">
-      </div>
-    </div>
-  </div>
+  <!--<div class="form-group row">-->
+    <!--<div class="col-5 form-col">-->
+      <!--<div class="float-label-container">-->
+        <!--<input type="tel"-->
+               <!--id="zipCode"-->
+               <!--class="form-control form-control-lg"-->
+               <!--formControlName="zipCode"-->
+               <!--placeholder="Postnummer">-->
+        <!--<label for="zipCode">Postnummer</label>-->
+        <!--<div *ngIf="myForm.get('zipCode').touched" class="errors">-->
+          <!--<small class="error" *ngIf="myForm.get('zipCode').hasError('required')">Krevd</small>-->
+          <!--<small class="error" *ngIf="myForm.get('zipCode').hasError('minlength')">For kort</small>-->
+          <!--<small class="error" *ngIf="myForm.get('zipCode').hasError('maxlength')">For langt</small>-->
+          <!--<small class="error" *ngIf="myForm.get('zipCode').hasError('pattern')">Ikke gyldig-->
+          <!--</small>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+    <!--<div class="col-7 form-col">-->
+      <!--<div class="float-label-container">-->
+        <!--<input type="text"-->
+               <!--class="form-control form-control-lg"-->
+               <!--formControlName="postalPlace"-->
+               <!--placeholder="Poststed">-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
 
   <div class="form-group" data-hj-masked>
     <div class="float-label-container">
