--- a/src/app/components/shop-navigation/shop-navigation.component.html
+++ b/src/app/components/shop-navigation/shop-navigation.component.html
@@ -17,12 +17,23 @@
     </div>
   </div>
 
-  <nav class="navbar navbar-light navbar-expand-md">
+  <nav class="navbar navbar-light navbar-expand">
     <div class="container" id="nav-container">
-      <a class="navbar-brand" [routerLink]="['/dugnad', clubUrl]" href="javascript:void(0)">
+      <a class="navbar-brand" [routerLink]="['/dugnad', clubUrl]">
         <img src="/assets/images/logo/logo_icon@50.png" height="50" class="d-inline-block align-top" alt="Logo">
-        <span style="line-height: 50px"><b><em>KVIKK</em></b> Dugnad</span>
+        <span style="line-height: 50px" class="brand-text"><b><em>KVIKK</em></b> Dugnad</span>
       </a>
+
+      <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/dugnad', clubUrl]">Hjem</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/dugnad/' + clubUrl + '/innlogging']">Logg inn</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
 </section>
