--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,11 +4,12 @@
 @import "assets/styles/buttons";
 @import "assets/styles/modals";
 @import "assets/styles/forms";
+@import "assets/styles/tables";
 
 html, body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 300;
-  overflow-x: hidden;
+  //overflow-x: hidden;
 }
 
 body {
@@ -24,7 +25,7 @@ h1 {
 }
 
 h2 {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 @media (max-width: 768px) {
@@ -48,7 +49,6 @@ h5 {
 h6 {
   margin-bottom: 2px;
 }
-
 
 #flashMessages {
   position: fixed;
@@ -115,3 +115,24 @@ accordion-group {
     }
   }
 }
+
+.table-hover tbody tr:hover {
+  cursor: pointer;
+}
+
+.red {
+  color: $red;
+}
+
+.green {
+  color: $green;
+}
+
+.yellow {
+  color: $yellow;
+}
+
+.blue {
+  color: $primary-light-blue;
+}
+
