Reservation button disabled

--- a/src/app/components/checkout-form/checkout-form.component.html
+++ b/src/app/components/checkout-form/checkout-form.component.html
@@ -120,6 +120,6 @@
     </div>
   </div>
   <div class="form-group">
-    <button type="submit" class="btn btn-primary btn-submit-form no-max-width">Reservér</button>
+    <button type="submit" class="btn btn-primary btn-submit-form no-max-width" [disabled]="myForm.invalid">Reservér</button>
   </div>
 </form>
