- Disable reserve button on loading - Get all reservations - Get product quantities

--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -4,7 +4,8 @@
   <app-blocks [blocks]="blocks" *ngIf="blocks"></app-blocks>
 
   <div *ngIf="sellers && sellers.length">
-    <table class="table table-hover">
+    <h2>Selgere</h2>
+    <table class="table table-hover" style="margin-top: 0">
       <thead>
       <tr>
         <td>Navn</td>
@@ -40,3 +41,5 @@
     <h2>Ingen selgere</h2>
   </div>
 </div>
+
+
