--- a/src/app/components/reservations/reservations.component.html
+++ b/src/app/components/reservations/reservations.component.html
@@ -1,24 +1,25 @@
 <app-shop-navigation></app-shop-navigation>
-
 <div class="container">
-  <h1 class="text-center" *ngIf="seller">{{seller.name}}</h1>
-
-
   <div *ngIf="reservations && reservations.length">
     <app-product-quantity-list [reservations]="reservations"></app-product-quantity-list>
+
     <h2>Bestillinger</h2>
-    <table class="table">
+    <table class="table" style="margin-top: 0">
       <thead>
       <tr>
+        <td>ID</td>
+        <td>Dato</td>
         <td>Kunde</td>
         <td>Ordrelinjer</td>
-        <td>Fortjeneste</td>
-        <td>Pris</td>
-        <td>Leverandørgjeld</td>
+        <td class="text-right">Omsetning</td>
+        <td class="text-right">Fortjeneste</td>
+        <td class="text-right">Leverandørgjeld</td>
       </tr>
       </thead>
       <tbody>
       <tr *ngFor="let reservation of reservations">
+        <td>{{reservation._id}}</td>
+        <td>{{reservation.created | date: 'short'}}</td>
         <td>
           <div>{{reservation.customer.name}}</div>
           <div>{{reservation.customer.address}}</div>
@@ -30,13 +31,13 @@
             {{line.product.name}} - ({{line.sku.color}} {{line.sku.size}}) x {{line.quantity}}
           </div>
         </td>
-        <td>
-          {{reservation.profit / 100}},-
-        </td>
-        <td>
+        <td class="text-right">
           {{reservation.amount / 100}},-
         </td>
-        <td>
+        <td class="text-right">
+          {{reservation.profit / 100}},-
+        </td>
+        <td class="text-right">
           {{(reservation.amount - reservation.profit) / 100}},-
         </td>
       </tr>
