--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header [style.background]="'url(../../../assets/images/header/'+ image + '.jpg)'">
   <div class="container">
     <div class="box pad-box">
-      <h1 id="title">HØSTKAMPANJE!</h1>
+      <h1 id="title">PERFEKTE JULEGAVER!</h1>
       <h2 class="sale-sub-title">Over <strong>56% fortjeneste</strong><br>på alle produkter</h2>
       <div class="row" style="margin-top: 20px">
         <div class="col text-center">
