--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,6 +3,7 @@
 <app-header [image]="'header'"></app-header>
 
 <app-product-list [frontPage]="true" [products]="products"></app-product-list>
+<app-references></app-references>
 
 <app-call-to-action [image]="'computer.jpg'"
                     [readMore]="true"
