--- a/src/app/components/russ/russ.component.html
+++ b/src/app/components/russ/russ.component.html
@@ -4,6 +4,8 @@
 
 <app-product-list [frontPage]="true" [products]="products"></app-product-list>
 
+<app-references></app-references>
+
 <app-call-to-action [image]="'computer.jpg'"
                     [readMore]="true"
                     [title]="'Digital dugnad gjør det enklere, både for deg og dine kunder'"
