--- a/src/assets/styles/_buttons.scss
+++ b/src/assets/styles/_buttons.scss
@@ -13,6 +13,11 @@ button {
   @media (max-width: 768px) {
     padding: 20px 0;
     width: 80%;
+    font-size: 16px;
+  }
+
+  @media (max-width: 340px) {
+    font-size: 13px;
   }
 }
 
