--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,10 @@
 <header [style.background]="'url(../../../assets/images/header/'+ image + '.jpg)'">
   <div class="container">
     <div class="box pad-box">
-      <h1 id="title">PERFEKTE JULEGAVER!</h1>
-      <h2 class="sale-sub-title">Over <strong>56% fortjeneste</strong><br>på alle produkter</h2>
+      <h1 id="title">Digital Dugnad</h1>
+      <h4 class="sale-sub-title">Selg først, betal senere - med egen nettbutikk</h4>
+      <br>
+      <h4 class="sale-sub-title"><strong>Over 56% fortjeneste</strong></h4>
       <div class="row" style="margin-top: 20px">
         <div class="col text-center">
           <app-order-sample-button></app-order-sample-button>
