--- a/src/app/components/how/how.component.html
+++ b/src/app/components/how/how.component.html
@@ -8,11 +8,11 @@
         guide.</p>
 
       <ul>
-        <li><b>Definer målet</b> med dugnaden, Treningsleir, russebuss eller hva dere skal gjøre.</li>
-        <li><b>Regn ut</b> hvor mye dere må tjene for å nå målet - deretter regn ut med kalkulatoren på hovedsiden over
+        <li><b>Definer målet</b> med dugnaden (Treningsleir, russebuss etc.).</li>
+        <li><b>Regn ut</b> hvor mye dere må tjene for å nå målet - deretter regn ut med kalkulatoren på "digital dugnad" over
           hvor mye dere trenger å selge.
         </li>
-        <li><b>Kom i gang</b> med salget! Bruk et av våre bestillingsskjema for å samle opp bestillinger på
+        <li><b>Kom i gang</b> med salget! Bruk vår digitale bestillingskjema for å samle opp bestillinger på
           forhånd og så opprett en ordre når dere er i mål. Husk dere kan gjennomføre flere dugnader gjennom året. F.eks
           høst og vår.
         </li>
@@ -20,23 +20,20 @@
 
       <h5>Bestilling</h5>
       <p>Når dere har samlet opp bestillinger er det på tide å opprette en ordre. Med digitalt bestillingsskjema samles
-        alle bestillinger opp automatisk, hvis dere bruker tradisjonelt så legger dere inn antall og type varer selv i
-        “bestilling”.
+        alle bestillinger opp automatisk.
       </p>
-      <p>Uansett hvordan dere velger å gjøre det, så tar vi kontakt når dere har lagt inn en ordre slik at vi kan avtale
-        leveringstidspunkt. Når vi sender varene, vil dere også motta en faktura med 3 ukers betalingsfrist slik at dere
-        kan selge varene før dere betaler.</p>
+      <p>Etter bestilling så vil det ta ca. 2-5 dager til varene ankommer den lokale butikken, med mindre annet er avtalt.
 
 
       <h5>Øk fortjeneste ved å holde gruppen informert og motivert</h5>
       <ol>
-        <li>Send e-post til alle deltakere/foreldre i gruppen om dugnaden. Skriv litt om hva målet er og hva dere vil få
+        <li>Send e-post eller avhold et møte med alle deltakere/foreldre i gruppen om dugnaden. Skriv litt om hva målet er og hva dere vil få
           ut av dugnaden om alle bidrar.
         </li>
-        <li>Hold alle oppdatert om hvordan salget går. Med digitalt bestillingsskjema så vil kjøpere få muligheten til å
-          skrive inn hvem de har kjøpt av, noe som hovedansvarlig vil ha oversikt over.
+        <li>Hele gruppa har alltid oversikt over hvordan salget går.
         </li>
-        <li>Takk alle for god innsats. Nevn gjerne hva dere har klart å samle inn og hvor mye det betyr.</li>
+        <li>Om noen ikke har gjort så mange slag - oppmuntre han/hun til å komme bedre i gang.</li>
+        <li>Husk å alltid takke kundene for støtten, kanskje støtter de dere igjen ved neste runde også</li>
       </ol>
 
       <h5>Øk fortjeneste ved forbederedelse og salg</h5>
@@ -57,8 +54,7 @@
         </li>
       </ol>
       <p>For å øke salget enda mer så anbefaler vi at dere kjøper inn en eller to produkter til hver deltaker på
-        forhånd. Hvorfor tenker du? Kvaliteten er topp, og når potensielle kjøpere får kjenne på hvordan varene er så
-        fører det til en mye høyere sjanse for at de har lyst å kjøpe.</p>
+        forhånd slik at kundene kan se og kjenne på kvaliteten.</p>
     </div>
   </div>
 </div>
