--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <flash-messages style="position: fixed; top: 60px; z-index:9999;"></flash-messages>
-<router-outlet (deactivate)="onDeactivate()"></router-outlet>
+<router-outlet></router-outlet>
 <div *ngIf="loading" class="loaderWindow">
   <div class="loader"></div>
 </div>
