--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center" id="block-row">
-  <div class="text-center block-col col-6" *ngFor="let block of blocks" [ngClass]="{'col-md-3': blocks.length === 4, 'col-sm-4': blocks.length === 3, 'col-md-3': blocks.length === 2, 'col-sm-12': blocks.length === 1}">
+  <div class="text-center block-col col-6" *ngFor="let block of blocks" [ngClass]="{'col-md-3': blocks.length === 4 || blocks.length === 2 , 'col-sm-4': blocks.length === 3, 'col-sm-12': blocks.length === 1}">
     <div class="block block-link" *ngIf="!block.counter">
       <a [routerLink]="[block.routerLink]">
         <span class="block-header {{block.color}}"><i class="fa fa-{{block.icon}}"></i></span>
