Fixed assets ref bug

--- a/src/app/components/references/references.component.html
+++ b/src/app/components/references/references.component.html
@@ -6,7 +6,7 @@
 
     <div class="row justify-content-center">
       <div class="col-sm-4 text-center" *ngFor="let reference of references" style="padding: 10px 0">
-        <img src="./assets/images/{{reference.image}}" class="rounded-circle" style="width: 160px">
+        <img src="../../../assets/images/{{reference.image}}" class="rounded-circle" style="width: 160px">
         <div class="reference-rating">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
         <div class="reference-content">{{reference.content}}</div>
         <div class="reference-name"><i>- {{reference.name}}</i></div>
