- Switched to Online Dugnad

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -10,7 +10,7 @@
           arrangerer, og de som deltar.
         </p>
         <h5 class="text-left" style="margin-bottom: 5px; font-weight: bolder;">Hva gjør vi?</h5>
-        <p>Kvikk Dugnad tilbyr et skreddersydd system med hovedformål å forenkle dugnaden. Systemet er utviklet
+        <p>Online Dugnad tilbyr et skreddersydd system med hovedformål å forenkle dugnaden. Systemet er utviklet
           i
           tett samarbeid med ingeniører og jurister, for å gi både privatpersoner og organisasjoner en god og
           sikker kundeopplevelse. Vi tilbyr også
