--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
       <div id="info-col">
         <h4>Dugnad</h4>
         <p>Dugnad er et utpreget norsk ord, og er kåret til Norges nasjonalord i 2004. Dugnad betegnes som frivillig,
-          ulønnet arbeid for et fellesskap.</p> <p>Kvikk Dugnad tilbyr en enklere, digitalisert dugnad med lettsolgte produkter
+          ulønnet arbeid for et fellesskap.</p> <p>Online Dugnad tilbyr en enklere, digitalisert dugnad med lettsolgte produkter
           som gir en høy fortjeneste til idrettslag, skoleklasser, russegrupper, russebusser og korps mm.</p>
       </div>
       <div id="links-col">
