--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,8 +2,11 @@
 
 <app-header [image]="'header'"></app-header>
 
-<app-references></app-references>
+<!--<app-values></app-values>-->
+
 <app-product-list [frontPage]="true" [products]="products"></app-product-list>
+
+<app-references></app-references>
 
 <app-call-to-action [image]="'computer.jpg'"
                     [readMore]="true"
