--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -19,7 +19,7 @@
   <div class="container" id="nav-container">
     <a class="navbar-brand" (click)="navigateHome()" href="javascript:void(0)">
       <img src="/assets/images/logo/logo_icon@50.png" height="50" class="d-inline-block align-top" alt="Logo">
-      <span style="line-height: 50px"><b><em>KVIKK</em></b> Dugnad</span>
+      <span style="line-height: 50px">Online Dugnad</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
