- Home update - Form in header - Values

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,6 +1,6 @@
 .footer {
   padding: 25px 0;
-  background-color: #f6f8ff;
+  background-color: #f9fafc;
   font-size: 14px;
   font-weight: 300 !important;
 
