--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,5 +1,7 @@
 $primary-color: black;
 $secondary-color: white;
+
+$black: #3e396b;
 $border-color: #dddddd;
 
 $instagram-color: #cd486b;
@@ -11,3 +13,5 @@ $green: #9ccc65;
 $gray: #868e96;
 $primary-blue: #3369e7;
 $primary-light-blue: #00aeff;
+
+$gray: #f6f8ff;
