--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,13 +1,13 @@
 <header [style.background]="'url(../../../assets/images/header/'+ image + '.jpg)'">
   <div class="container">
-    <div class="box pad-box">
+    <div class="box pad-box" id="header-box">
       <h1 id="title">Digital Dugnad</h1>
       <h4 class="sale-sub-title">Selg først, betal senere - med egen nettbutikk</h4>
       <br>
-      <h4 class="sale-sub-title"><strong>Over 56% fortjeneste</strong></h4>
+      <!--<h4 class="sale-sub-title"><strong>Over 56% fortjeneste</strong></h4>-->
       <div class="row" style="margin-top: 20px">
         <div class="col text-center">
-          <app-order-sample-button></app-order-sample-button>
+          <app-order-sample-form></app-order-sample-form>
         </div>
       </div>
     </div>
