--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,9 +2,14 @@
 
 <app-header [image]="'header'"></app-header>
 
-<!--<app-values></app-values>-->
+<app-values></app-values>
+
+<hr style="width: 50%; min-width: 350px; margin: 0 auto;">
 
 <app-product-list [frontPage]="true" [products]="products"></app-product-list>
+
+
+<hr style="width: 50%; min-width: 350px; margin: 0 auto;">
 
 <app-references></app-references>
 
