--- a/src/app/components/references/references.component.html
+++ b/src/app/components/references/references.component.html
@@ -1,15 +1,16 @@
 <section id="testimonials">
   <div class="container">
 
-    <h3 class="text-center">Frosta Skole 8. trinn tjente mer enn hva de satt som mål!</h3>
-    <app-blocks [blocks]="blocks"></app-blocks>
+    <h3 class="text-center">Se hva våre kunder sier om oss</h3>
 
-    <div class="row justify-content-center">
-      <div class="col-sm-4 text-center" *ngFor="let reference of references" style="padding: 10px 0">
-        <img src="../../../assets/images/{{reference.image}}" class="rounded-circle" style="width: 160px">
-        <div class="reference-rating">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+    <div id="testimonials-row">
+      <div class="text-center reference" *ngFor="let reference of references">
+        <img src="../../../assets/images/{{reference.image}}" class="rounded-circle reference-image">
+        <div class="reference-organization"><b>{{reference.organization}}</b></div>
+        <div class="reference-profit">Tjente <b>{{reference.profitPerMember}}</b> per deltaker</div>
+        <!--<div class="reference-rating">&#9733;&#9733;&#9733;&#9733;&#9733;</div>-->
         <div class="reference-content">{{reference.content}}</div>
-        <div class="reference-name"><i>- {{reference.name}}</i></div>
+        <div class="reference-name"><i>- {{reference.name}}, {{reference.position}}</i></div>
       </div>
     </div>
   </div>
