--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,500');
+@import '../node_modules/bootstrap/scss/bootstrap';
 @import "assets/styles/variables";
 @import "assets/styles/loader";
 @import "assets/styles/buttons";
