--- a/src/app/components/digital-order-form/digital-order-form.component.html
+++ b/src/app/components/digital-order-form/digital-order-form.component.html
@@ -2,7 +2,7 @@
 
 
 <div class="container">
-  <div class="row justify-content-center" style="padding: 40px 0">
+  <div class="row justify-content-center" style="padding-top: 40px; padding-bottom: 40px;">
     <h1 class="text-center">Så enkelt er det</h1>
     <div class="row justify-content-center">
       <div style="padding: 5px" class="col-md-4 col-sm-6 col-xs-8"
