--- a/src/app/components/references/references.component.scss
+++ b/src/app/components/references/references.component.scss
@@ -1,16 +1,16 @@
 @import "../../../assets/styles/variables";
 
 #testimonials {
-  padding: 40px 0;
+  padding-top: 40px;
 
-  #testimonials-row {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-
-    .reference {
-      padding: 0 30px;
-      flex: 0 1 600px;
+  //#testimonials-row {
+  //  display: flex;
+  //  justify-content: center;
+  //  margin-top: 20px;
+  //
+  //  .reference {
+  //    padding: 0 30px;
+  //    flex: 0 1 600px;
 
       .reference-image {
         width: 140px;
@@ -43,5 +43,35 @@
         margin-bottom: 5px;
       }
     }
+  //}
+//}
+
+swiper {
+  height: 400px;
+
+  @media (max-width: 607px) {
+    height: 450px;
+  }
+
+  @media (max-width: 421px) {
+    height: 500px;
   }
 }
+
+.swiper-button-prev {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%233e396b'%2F%3E%3C%2Fsvg%3E") !important;
+}
+
+.swiper-button-next {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%233e396b'%2F%3E%3C%2Fsvg%3E") !important;
+
+}
+
+.swiper-button-prev, .swiper-button-next {
+  height: 30px;
+
+  @media (max-width: 768px) {
+    height: 15px;
+  }
+}
+
