--- a/src/app/components/digital-order-form/digital-order-form.component.html
+++ b/src/app/components/digital-order-form/digital-order-form.component.html
@@ -30,7 +30,7 @@
           <li>Produkter av høy kvalitet som vanligvis kjøpes inn flere ganger gjennom et år gir fornøyde kunder og
             store muligheter for å iverksette en ny salgsrunde.
           </li>
-          <li>Si farvel til regneark, digitalt salgsskjema gjør hele salgsprossesen til en lek!</li>
+          <li>Si farvel til regneark. Digitalt salgsskjema gjør hele salgsprossesen til en lek!</li>
           <li>Faktura med 3 uker betalingsfrist fra når varene er levert.</li>
           <li>Når dere fyller ut
             salgsskjema så er salget gjort på forhånd og dere har god tid til å samle inn pengene før dere må betale.
@@ -42,8 +42,7 @@
 
   <app-call-to-action [image]="'computer-design.jpg'"
                       [title]="'Digitaliser dugnaden'"
-                      [subTitle]="'Sett i gang i dag - Helt uforpliktende'"
-                      [contact]="true">
+                      [subTitle]="'Sett i gang i dag - Helt uforpliktende'">
   </app-call-to-action>
 
   <app-footer></app-footer>
