- School and russ update

--- a/src/app/components/russ/russ.component.html
+++ b/src/app/components/russ/russ.component.html
@@ -2,7 +2,13 @@
 
 <app-header [image]="'russ'"></app-header>
 
+<app-values></app-values>
+
+<hr style="width: 50%; min-width: 350px; margin: 0 auto;">
+
 <app-product-list [frontPage]="true" [products]="products"></app-product-list>
+
+<hr style="width: 50%; min-width: 350px; margin: 0 auto;">
 
 <app-references></app-references>
 
