--- a/src/app/components/call-to-action/call-to-action.component.scss
+++ b/src/app/components/call-to-action/call-to-action.component.scss
@@ -1,11 +1,11 @@
 #cta-section {
   margin-top: 30px;
   background: linear-gradient(
-      rgba(255, 255, 255, 0.65),
-      rgba(255, 255, 255, 0.80)
+      rgba(255, 255, 255, 0.75),
+      rgba(255, 255, 255, 0.85)
   ), url(../../../assets/images/digital.jpg) center no-repeat;
   width: 100%;
-  height: 300px;
+  padding: 40px 0;
   max-height: 80vh;
   display: flex;
   align-items: center;
