--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,6 +7,7 @@
       <!--<h4 class="sale-sub-title"><strong>Over 56% fortjeneste</strong></h4>-->
       <div class="row" style="margin-top: 20px">
         <div class="col text-center">
+          <h4>Kjenn <b>kvaliteten</b> selv!</h4>
           <app-order-sample-form></app-order-sample-form>
         </div>
       </div>
