--- a/src/app/components/order-sample-form/order-sample-form.component.html
+++ b/src/app/components/order-sample-form/order-sample-form.component.html
@@ -38,6 +38,6 @@
   </div>
 
   <div class="form-group text-right">
-    <button type="submit" class="btn btn-success">Bestill gratis vareprøver</button>
+    <button type="submit" class="btn btn-success" [disabled]="myForm.invalid">Bestill gratis vareprøver</button>
   </div>
 </form>
