- Switch from kvikk to online

--- a/src/app/components/shop-navigation/shop-navigation.component.html
+++ b/src/app/components/shop-navigation/shop-navigation.component.html
@@ -21,7 +21,7 @@
     <div class="container" id="nav-container">
       <a class="navbar-brand" [routerLink]="['/dugnad', clubUrl]">
         <img src="/assets/images/logo/logo_icon@50.png" height="50" class="d-inline-block align-top" alt="Logo">
-        <span style="line-height: 50px" class="brand-text"><b><em>KVIKK</em></b> Dugnad</span>
+        <span style="line-height: 50px" class="brand-text">Online Dugnad</span>
       </a>
 
       <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
