- Product price fixes

--- a/src/app/components/product-list/product-list.component.scss
+++ b/src/app/components/product-list/product-list.component.scss
@@ -41,12 +41,13 @@
         }
 
         .product-profit {
-
+          margin-bottom: 10px;
         }
 
         .product-price {
           margin-bottom: 10px;
         }
+
 
         &:hover {
           transform: translateY(-5px) translateZ(0);
