--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -19,9 +19,10 @@
           <div class="product-name">{{product.name}}</div>
           <div class="product-caption">{{product.caption}}</div>
           <hr>
+          <div class="buy-price" *ngIf="!shop">Innkjøpspris: {{(product.price2 - product.profit2) / 100}},-</div>
+          <div class="product-price"><span *ngIf="!shop">Anbefalt utsalgspris: </span>{{product.price2 / 100}},-</div>
           <div class="product-profit" *ngIf="!shop"><b>Dere tjener {{product.profit2 / 100}},-</b></div>
           <div class="product-profit" *ngIf="shop"><b>Du støtter {{product.profit2 / 100}},-</b></div>
-          <div class="product-price">{{product.price2 / 100}},-</div>
 
           <button class="btn btn-secondary">Vis detaljer</button>
         </div>
